[package]
name = "enum-key-derive"
version = "0.1.0"
edition = "2021"
authors = ["kneelawk <kneelawk@gmail.com>"]
description = "Derive macro for KeyableEnum trait"
license = "MIT"
repository = "https://github.com/Kneelawk/enum-key.git"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
